these are my changes

--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
   <div class="cv-container">
     <aside class="sidebar">
       <div class="profile-img-container">
-        <img src="images/bird-8788491_1280.jpg" alt="Profile Image" class="profile-img" />
+        <img src="images/FINALADAM - Copy.jpg" alt="Profile Image" class="profile-img" />
       </div>
       <div class="info-block">
-        <p><strong>Name:</strong> Docile Imbereyemaso <br><small>My name is</small></p>
+        <p><strong>Name:</strong> Adam Mahmoud <br><small>My name is</small></p>
       </div>
       <div class="info-block">
-        <p><strong>Age:</strong> 20 <br><small>I am this old</small></p>
+        <p><strong>Age:</strong> 10 <br><small>I am this old</small></p>
       </div>
       <div class="info-block">
-        <p><strong>School:</strong>  <br><small>This is where I learn</small></p>
+        <p><strong>School:</strong> VVA <br><small>This is where I learn</small></p>
       </div>
       <div class="info-block">
-        <p><strong>Email:</strong> ___________________________ <br><small>My or my parent's email</small></p>
+        <p><strong>Email:</strong> adamaltemammy@gmail.com <br><small>My or my parent's email</small></p>
       </div>
       <div class="info-block">
         <p><strong>Phone:</strong> ___________________________ <br><small>My or my parent's phone</small></p>
