Update index.html phone  number

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <p><strong>Email:</strong> adamaltemammy@gmail.com <br><small>My or my parent's email</small></p>
       </div>
       <div class="info-block">
-        <p><strong>Phone:</strong> ___________________________ <br><small>My or my parent's phone</small></p>
+        <p><strong>Phone:</strong> +250 791 848 914 <br><small>My or my parent's phone</small></p>
       </div>
       <div class="info-block">
         <p><strong>Location:</strong> ___________________________ <br><small>Where I live</small></p>
